# betting-flow-e2e

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
docs/: bug_reports.md  execution_results.md  strategy_recommendations.md  test_plan.md
src/betting_flow_e2e/: __init__.py  config.py
src/betting_flow_e2e/api/: assertions.py  client.py
src/betting_flow_e2e/api/contracts/: __init__.py  assertions.py  openapi.json
src/betting_flow_e2e/data/: __init__.py  test_data.py
src/betting_flow_e2e/domain/: __init__.py  betting.py  matches.py
src/betting_flow_e2e/reporting/: __init__.py  artifacts.py
src/betting_flow_e2e/ui/: __init__.py  assertions.py  base_page.py  driver_factory.py  selectors.py
src/betting_flow_e2e/ui/components/: __init__.py  bet_slip.py  receipt_modal.py
src/betting_flow_e2e/ui/flows/: __init__.py  betting_flow.py
src/betting_flow_e2e/ui/pages/: __init__.py  matches_page.py
src/betting_flow_e2e/utils/: money.py
tests/api/: test_place_bet_validation.py
tests/ui/: test_single_bet_placement.py
